sixth commit (button prev)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@ Americas.</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
 freshwater lake.</string>
     <string name="next_button">Next</string>
+    <string name="prev_button">Prev</string>
 </resources>
