tenth commit (number of correct answers)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@ Americas.</string>
 freshwater lake.</string>
     <string name="next_button">Next</string>
     <string name="prev_button">Prev</string>
+    <string name="result_message">Правильных ответов: %1$d из %2$d</string>
 </resources>
